api: saving new Element

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html data-bs-theme="dark" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>AngularVocabulariesLoc</title>
-    <base href="/" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link href="favicon.ico" rel="icon" type="image/x-icon" />
-  </head>
-  <body>
-    <div class="container container-lg py-3 px-2 mx-auto">
-      <app-root></app-root>
-    </div>
-  </body>
+<head>
+    <meta charset="utf-8"/>
+    <title>Translator</title>
+    <base href="/"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <link href="favicon.ico" rel="icon" type="image/x-icon"/>
+</head>
+<body>
+<div class="container container-lg py-3 px-2 mx-auto">
+    <app-root></app-root>
+</div>
+</body>
 </html>
