--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,7 +8,7 @@
     <link href="favicon.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body>
-<div class="container container-lg mx-auto">
+<div class="container-lg mx-auto">
     <app-root></app-root>
 </div>
 </body>
