--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,7 @@
     <title>Translator</title>
     <base href="/"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <link href="favicon.ico" rel="icon" type="image/x-icon"/>
+    <link href="/angular/browser/favicon.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body>
 <div class="container-lg mx-auto">
