Fix controls positioning

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,7 +8,7 @@
     <link href="/angular/browser/favicon.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body>
-<div class="container-lg mx-auto">
+<div class="container-lg mx-auto vh-100 d-flex">
     <app-root></app-root>
 </div>
 </body>
